add pip install -r requirements.txt

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ test:
   stage: test
   script:
   - pip install -U sphinx
+  - pip install -U -r requirements.txt
   - sphinx-build -b html source public
   only:
   - branches
@@ -14,6 +15,7 @@ pages:
   stage: deploy
   script:
   - pip install -U sphinx
+  - pip install -U -r requirements.txt
   - sphinx-build -b html source public
   artifacts:
     paths:
