--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,9 +24,9 @@ jobs:
         sphinx-build -b html source public
     - name: Deploy GitHub Pages
       if: success()
-      uses: crazy-max/ghaction-github-pages@v1.4.0
-      with:
-        target_branch: gh-pages
-        build_dir: public
+      uses: igolopolosov/github-action-release-github-pages@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
+        GITHUB_PAGES_RELEASE_BRANCH: gh-pages
+        PROJECT_BUILD_FOLDER: public
+        GITHUB_PAGES_CLEANUP_SCRIPT: "touch .nojekyll"
