--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -29,4 +29,4 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
         GITHUB_PAGES_RELEASE_BRANCH: gh-pages
         PROJECT_BUILD_FOLDER: public
-        GITHUB_PAGES_CLEANUP_SCRIPT: "touch .nojekyll"
+        GITHUB_PAGES_CLEANUP_SCRIPT: "cd $PROJECT_BUILD_FOLDER && touch .nojekyll"
