--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Build sphinx
       run: |
         sphinx-build -b html source public
+        touch public/.nojekyll
     - name: Deploy GitHub Pages
       if: success()
       uses: crazy-max/ghaction-github-pages@v1.4.0
